--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context="com.example.Pet_Tracker.Login">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,14 +13,8 @@
         android:text="Iniciar Sesión"
         android:layout_marginTop="20dp"
         android:textSize="30dp"
-        android:layout_gravity="center"/>
-
-    <EditText android:id="@+id/etNombre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:hint="Nombre"/>
+    />
 
     <EditText android:id="@+id/etCorreo"
         android:layout_width="wrap_content"
@@ -28,7 +22,8 @@
         android:layout_gravity="center"
         android:inputType="textEmailAddress"
         android:layout_marginTop="20dp"
-        android:hint="Correo"/>
+        android:hint="Correo"
+    />
 
     <EditText android:id="@+id/etContra"
         android:layout_width="wrap_content"
@@ -36,30 +31,32 @@
         android:layout_gravity="center"
         android:inputType="textPassword"
         android:layout_marginTop="20dp"
-        android:hint="Contraseña"/>
+        android:hint="Contraseña"
+    />
 
-    <LinearLayout
+    <Button android:id="@+id/iniciarSesion"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Iniciar Sesión"
+        />
+
+    <TextView
         android:layout_marginTop="20dp"
-        android:layout_gravity="center">
+        android:textSize="15sp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="O si no tienes cuenta"
+        />
 
-        <Button
-            android:layout_marginRight="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Registrarse"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Iniciar Sesión"/>
-
-
-    </LinearLayout>
-
-
-
+    <Button android:id="@+id/registrarse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Registrarse"
+        />
 
 
 
