--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/fondo_gradiente"
     tools:context="com.example.Pet_Tracker.Login">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registrarse"
-        android:layout_marginTop="20dp"
-        android:textSize="30dp"
+        android:layout_marginTop="@dimen/margen_top_registrarse"
+        android:textSize="@dimen/tamaño_registrarse"
         android:layout_gravity="center"
     />
 
@@ -20,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/margen_top_registrarse"
         android:hint="Nombre"
     />
 
@@ -29,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="textEmailAddress"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/margen_top_registrarse"
         android:hint="Correo"
     />
 
@@ -38,12 +39,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="textPassword"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/margen_top_registrarse"
         android:hint="Contraseña"
     />
 
     <Button android:id="@+id/registrarse"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/margen_top_registrarse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -51,7 +52,7 @@
     />
 
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/margen_top_registrarse"
         android:textSize="15sp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
