--- a/app/src/main/res/layout/list_item_animales.xml
+++ b/app/src/main/res/layout/list_item_animales.xml
@@ -15,30 +15,37 @@
             android:orientation="vertical">
 
 
-<!--    <ImageView android:id="@+id/imagenMascota"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />-->
+                <!--<ImageView android:id="@+id/imagenMascota"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                />-->
 
-    <TextView android:id="@+id/nombreMascota"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
 
-    <TextView android:id="@+id/edadMascota"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
+            <TextView android:id="@+id/nombreMascota"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            />
 
-    <TextView android:id="@+id/sexoMascota"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
+            <TextView android:id="@+id/especieMascota"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            />
 
-    <TextView android:id="@+id/razaMascota"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
+            <TextView android:id="@+id/edadMascota"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            />
+
+            <TextView android:id="@+id/razaMascota"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            />
+
+            <TextView android:id="@+id/sexoMascota"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            />
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
