--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -8,40 +8,58 @@
     android:background="@drawable/fondo_gradiente"
     tools:context="com.example.Pet_Tracker.Login">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Registrarse"
-        android:layout_marginTop="@dimen/margen_top_registrarse"
-        android:textSize="@dimen/tamaño_registrarse"
-        android:layout_gravity="center"
-    />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
-    <EditText android:id="@+id/etNombre"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputEditText android:id="@+id/etNombre"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margen_top_registrarse"
         android:hint="Nombre"
+        android:background="@android:color/transparent"
     />
 
-    <EditText android:id="@+id/etCorreo"
-        android:layout_width="wrap_content"
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
+
+    <com.google.android.material.textfield.TextInputEditText android:id="@+id/etCorreo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="textEmailAddress"
         android:layout_marginTop="@dimen/margen_top_registrarse"
         android:hint="Correo"
+        android:background="@android:color/transparent"
     />
 
-    <EditText android:id="@+id/etContra"
-        android:layout_width="wrap_content"
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
+
+    <com.google.android.material.textfield.TextInputEditText android:id="@+id/etContra"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="textPassword"
         android:layout_marginTop="@dimen/margen_top_registrarse"
         android:hint="Contraseña"
+        android:background="@android:color/transparent"
     />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button android:id="@+id/registrarse"
         android:layout_marginTop="@dimen/margen_top_registrarse"
