--- a/app/src/main/res/layout/list_item_animales.xml
+++ b/app/src/main/res/layout/list_item_animales.xml
@@ -1,50 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/tarjeta"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">ç
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:cardBackgroundColor="#512DA8"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="10dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
 
-                <!--<ImageView android:id="@+id/imagenMascota"
+            <!--<ImageView android:id="@+id/imagenMascota"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                 />-->
 
+            <TextView
+                android:id="@+id/nombreMascota"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-            <TextView android:id="@+id/nombreMascota"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-            />
+            <TextView
+                android:id="@+id/especieMascota"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-            <TextView android:id="@+id/especieMascota"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-            />
+            <TextView
+                android:id="@+id/edadMascota"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-            <TextView android:id="@+id/edadMascota"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-            />
+            <TextView
+                android:id="@+id/razaMascota"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-            <TextView android:id="@+id/razaMascota"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-            />
-
-            <TextView android:id="@+id/sexoMascota"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-            />
+            <TextView
+                android:id="@+id/sexoMascota"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
