--- a/app/src/main/res/layout/list_item_animales.xml
+++ b/app/src/main/res/layout/list_item_animales.xml
@@ -17,40 +17,53 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
+            <ImageView android:id="@+id/imagenMascota"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+            />
+            <View android:layout_width="1dip"
+                android:layout_marginLeft="10dp"
+                android:layout_height="fill_parent"
+                android:background="#000000" />
 
-            <!--<ImageView android:id="@+id/imagenMascota"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                />-->
-
-            <TextView
-                android:id="@+id/nombreMascota"
-                android:textSize="20dp"
-                android:textStyle="bold"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/especieMascota"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/edadMascota"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/razaMascota"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/nombreMascota"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/sexoMascota"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/especieMascota"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/edadMascota"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/razaMascota"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/sexoMascota"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+        </LinearLayout>
 
         </LinearLayout>
 
