Problema con imagenes

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="tamaño_registrarse">30sp</dimen>
     <dimen name="margen_top_registrarse">20dp</dimen>
+    <dimen name="diez">10dp</dimen>
 </resources>
