--- a/app/src/main/res/layout/activity_detalle_mascota.xml
+++ b/app/src/main/res/layout/activity_detalle_mascota.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/diez"
             android:orientation="vertical">
 
         <ImageView android:id="@+id/imagenDetalleMascota"
