--- a/app/src/main/res/layout/activity_anadir_mascota.xml
+++ b/app/src/main/res/layout/activity_anadir_mascota.xml
@@ -11,13 +11,13 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -29,7 +29,7 @@
                 <ImageView android:id="@+id/imagenCrearMascota"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     />
 
@@ -55,7 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margen_top_registrarse"
+                    android:layout_marginTop="10dp"
                     android:hint="Nombre"
                     android:background="@android:color/transparent"
                     />
@@ -73,19 +73,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margen_top_registrarse"
+                    android:layout_marginTop="10dp"
                     android:hint="Raza"
                     android:background="@android:color/transparent"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <TextView
                     android:layout_gravity="center_vertical"
@@ -95,16 +88,11 @@
                     android:text="Año"
                     />
 
-                <com.andanhm.quantitypicker.QuantityPicker
+                <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
                     android:layout_gravity="center"
                     android:id="@+id/anyoMascota"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    app:quantityColor="#000000"
-                    app:buttonColor="#000000"
-                    />
+                    android:layout_height="wrap_content"/>
 
                 <TextView
                     android:layout_gravity="center_vertical"
@@ -114,17 +102,11 @@
                     android:text="Mes"
                     />
 
-                <com.andanhm.quantitypicker.QuantityPicker
+                <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
                     android:layout_gravity="center"
                     android:id="@+id/mesMascota"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    app:quantityColor="#000000"
-                    app:buttonColor="#000000"
-                    />
-
-            </LinearLayout>
+                    android:layout_height="wrap_content"/>
 
             <RadioGroup
                 android:layout_gravity="center"
@@ -151,7 +133,7 @@
 
             <Button
                 android:id="@+id/botonCambiarImagenMascota"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -160,7 +142,7 @@
 
             <Button
                 android:id="@+id/botonAnadirMascota"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
