--- a/app/src/main/res/layout/activity_editar_mascota.xml
+++ b/app/src/main/res/layout/activity_editar_mascota.xml
@@ -12,7 +12,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         >
 
         <LinearLayout
@@ -30,7 +30,7 @@
             <ImageView android:id="@+id/imagenEditarMascota"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
             />
 
@@ -56,7 +56,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margen_top_registrarse"
+                    android:layout_marginTop="10dp"
                     android:hint="Nombre"
                     android:background="@android:color/transparent"
                 />
@@ -74,19 +74,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margen_top_registrarse"
+                    android:layout_marginTop="10dp"
                     android:hint="Raza"
                     android:background="@android:color/transparent"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <TextView
                     android:layout_gravity="center_vertical"
@@ -96,16 +89,11 @@
                     android:text="Año"
                 />
 
-                <com.andanhm.quantitypicker.QuantityPicker
+                <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
                     android:layout_gravity="center"
                     android:id="@+id/anyoEditarMascota"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    app:quantityColor="#000000"
-                    app:buttonColor="#000000"
-                />
+                    android:layout_height="wrap_content"/>
 
                 <TextView
                     android:layout_gravity="center_vertical"
@@ -115,17 +103,11 @@
                     android:text="Mes"
                 />
 
-                <com.andanhm.quantitypicker.QuantityPicker
+                <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
                     android:layout_gravity="center"
                     android:id="@+id/mesEditarMascota"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    app:quantityColor="#000000"
-                    app:buttonColor="#000000"
-                />
-
-            </LinearLayout>
+                    android:layout_height="wrap_content"/>
 
             <RadioGroup
                 android:layout_gravity="center"
@@ -150,7 +132,7 @@
 
             <Button
                 android:id="@+id/botonEditarImagenMascota"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -159,7 +141,7 @@
 
             <Button
                 android:id="@+id/botonEditarMascota"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
