--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+
+    <!-- Colores tema claro -->
+
+    <color name="light_blue">#00ACC1</color>
+    <color name="medium_blue">#039BE5</color>
+    <color name="darker_blue">#1E88E5</color>
+
+    <color name="medium_green">#7CB342</color>
+    <color name="light_green">#FDD835</color>
+
+    <color name="light_white">#BBC7CC</color>
+
+    <!-- Colores tema oscuro -->
+
+    <color name="light_blue_dark">#026B78</color>
+    <color name="medium_blue_dark">#015B87</color>
+    <color name="darker_blue_dark">#114D81</color>
+
+    <color name="medium_green_dark">#415E22</color>
+    <color name="light_green_dark">#9C8521</color>
+
+    <color name="light_white_dark">#4A4E50</color>
+
+    <!-- Colores estaticos -->
+
+    <color name="red">#E53935</color>
+    <color name="orange">#FB8C00</color>
+    <color name="green">#43A047</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
