--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,61 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Login" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
+   <!-- <style name="Theme.Login" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        &lt;!&ndash; Primary brand color. &ndash;&gt;
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
+        &lt;!&ndash; Secondary brand color. &ndash;&gt;
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        &lt;!&ndash; Status bar color. &ndash;&gt;
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        &lt;!&ndash; Customize your theme here. &ndash;&gt;
+    </style>-->
+
+    <style name="temaClaro" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
+        <item name="backgroundColor">@drawable/fondo_gradiente</item>
+
+        <item name="colorPrimary">@color/light_blue</item>
+        <item name="colorPrimaryVariant">@color/medium_blue</item>
+
+        <item name="colorAccent">@color/orange</item>
+        <item name="colorError">@color/red</item>
+        <item name="color">@color/green</item>
+
+        <item name="colorSecondary">@color/medium_green</item>
+        <item name="colorSecondaryVariant">@color/light_green</item>
+
+        <item name="textColor">@color/black</item>
+        <item name="tintColor">@color/white</item>
+        <item name="buttonColor">@color/light_blue</item>
+
+        <item name="cardBackgroundColor">@color/light_white</item>
+
     </style>
+
+    <style name="temaOscuro" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
+        <item name="backgroundColor">@drawable/fondo_gradiente_oscuro</item>
+
+        <item name="colorPrimary">@color/light_blue_dark</item>
+        <item name="colorPrimaryVariant">@color/medium_blue_dark</item>
+
+        <item name="colorAccent">@color/orange</item>
+        <item name="colorError">@color/red</item>
+        <item name="color">@color/green</item>
+
+        <item name="colorSecondary">@color/medium_green_dark</item>
+        <item name="colorSecondaryVariant">@color/light_green_dark</item>
+
+        <item name="textColor">@color/black</item>
+        <item name="tintColor">@color/white</item>
+        <item name="buttonColor">@color/light_blue_dark</item>
+
+        <item name="cardBackgroundColor">@color/light_white_dark</item>
+
+    </style>
+
 </resources>
