--- a/app/src/main/res/drawable/fondo_gradiente_oscuro.xml
+++ b/app/src/main/res/drawable/fondo_gradiente_oscuro.xml
@@ -4,8 +4,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#125E87"
-                android:endColor="#000000"
+                android:startColor="#1c92d2"
+                android:endColor="#0D3B53"
                 android:angle = "90"
                 android:type="linear"
                 />
