--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,6 +4,7 @@
     <declare-styleable name="ds">
 
         <attr name="cardBackgroundColor" format="color" />
+        <attr name="backgroundColor" format="color" />
         <attr name="textColor" format="color" />
         <attr name="tintColor" format="color" />
         <attr name="buttonColor" format="color" />
