--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -50,8 +50,8 @@
         <item name="colorSecondary">@color/medium_green_dark</item>
         <item name="colorSecondaryVariant">@color/light_green_dark</item>
 
-        <item name="textColor">@color/black</item>
-        <item name="tintColor">@color/white</item>
+        <item name="textColor">@color/white</item>
+        <item name="tintColor">@color/black</item>
         <item name="buttonColor">@color/light_blue_dark</item>
 
         <item name="cardBackgroundColor">@color/light_white_dark</item>
