--- a/app/src/main/res/layout/activity_mascotas.xml
+++ b/app/src/main/res/layout/activity_mascotas.xml
@@ -31,6 +31,7 @@
         android:layout_marginRight="16dp"
         android:layout_alignBottom="@id/linear"
         android:layout_alignEnd="@+id/linear"
+        android:background="?attr/buttonColor"
         />
 
 
