--- a/app/src/main/res/layout/list_item_animales.xml
+++ b/app/src/main/res/layout/list_item_animales.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="?cardBackgroundColor"
         app:cardElevation="10dp">
 
         <LinearLayout
