--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="medium_green">#7CB342</color>
     <color name="light_green">#FDD835</color>
 
-    <color name="light_white">#BBC7CC</color>
+    <color name="light_white">#8ADDFF</color>
 
     <!-- Colores tema oscuro -->
 
