--- a/app/src/main/res/layout/activity_anadir_mascota.xml
+++ b/app/src/main/res/layout/activity_anadir_mascota.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/fondo_gradiente"
+    android:background="?attr/backgroundColor"
     tools:context="com.example.Pet_Tracker.AnadirMascota">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:cardBackgroundColor="?attr/cardBackgroundColor"
         android:layout_margin="10dp"
         >
 
@@ -47,6 +48,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:boxStrokeColor="?attr/textColor"
+                app:hintTextColor="?attr/textColor"
+                android:textColorHint="?attr/textColor"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
@@ -55,6 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:textColor="?attr/textColor"
                     android:layout_marginTop="10dp"
                     android:hint="Nombre"
                     android:background="@android:color/transparent"
@@ -65,6 +70,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:boxStrokeColor="?attr/textColor"
+                app:hintTextColor="?attr/textColor"
+                android:textColorHint="?attr/textColor"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
@@ -73,6 +81,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:textColor="?attr/textColor"
                     android:layout_marginTop="10dp"
                     android:hint="Raza"
                     android:background="@android:color/transparent"
@@ -81,10 +90,10 @@
             </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:layout_gravity="center_vertical"
+                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
+                    android:textColor="?attr/textColor"
                     android:text="Año"
                     />
 
@@ -95,10 +104,10 @@
                     android:layout_height="wrap_content"/>
 
                 <TextView
-                    android:layout_gravity="center_vertical"
+                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
+                    android:textColor="?attr/textColor"
                     android:text="Mes"
                     />
 
@@ -138,6 +147,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Cambiar imagen"
+                android:textColor="?attr/textColor"
+                android:backgroundTint="?attr/buttonColor"
                 />
 
             <Button
@@ -147,6 +158,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Anadir mascota"
+                android:textColor="?attr/textColor"
+                android:backgroundTint="?attr/buttonColor"
                 />
 
         </LinearLayout>
