--- a/app/src/main/res/layout/activity_editar_mascota.xml
+++ b/app/src/main/res/layout/activity_editar_mascota.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo_gradiente"
+    android:background="?attr/backgroundColor"
     android:orientation="vertical"
     tools:context="com.example.Pet_Tracker.EditarMascota">
 
@@ -12,6 +12,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:cardBackgroundColor="?attr/cardBackgroundColor"
         android:layout_margin="10dp"
         >
 
@@ -48,6 +49,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:boxStrokeColor="?attr/textColor"
+                app:hintTextColor="?attr/textColor"
+                android:textColorHint="?attr/textColor"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
@@ -58,6 +62,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:hint="Nombre"
+                    android:textColor="?attr/textColor"
                     android:background="@android:color/transparent"
                 />
 
@@ -66,6 +71,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:boxStrokeColor="?attr/textColor"
+                app:hintTextColor="?attr/textColor"
+                android:textColorHint="?attr/textColor"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
@@ -76,16 +84,18 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:hint="Raza"
+                    android:textColor="?attr/textColor"
                     android:background="@android:color/transparent"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:layout_gravity="center_vertical"
+                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
+                    android:textColor="?attr/textColor"
+
                     android:text="Año"
                 />
 
@@ -96,10 +106,10 @@
                     android:layout_height="wrap_content"/>
 
                 <TextView
-                    android:layout_gravity="center_vertical"
+                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
+                    android:textColor="?attr/textColor"
                     android:text="Mes"
                 />
 
@@ -136,6 +146,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:textColor="?attr/textColor"
+                android:backgroundTint="?attr/buttonColor"
                 android:text="Cambiar imagen"
             />
 
@@ -146,6 +158,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Editar mascota"
+                android:textColor="?attr/textColor"
+                android:backgroundTint="?attr/buttonColor"
             />
 
         </LinearLayout>
