--- a/app/src/main/res/layout/list_item_seguimientos.xml
+++ b/app/src/main/res/layout/list_item_seguimientos.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
+        android:backgroundTint="?attr/cardBackgroundColor"
         app:cardElevation="10dp">
 
     <LinearLayout
@@ -23,26 +24,31 @@
             android:id="@+id/tipoSeguimiento"
             android:textSize="20dp"
             android:textStyle="bold"
+            android:textColor="?attr/textColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/pesoSeguimiento"
+            android:textColor="?attr/textColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/descripcionSeguimiento"
+            android:textColor="?attr/textColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/fechaSeguimiento"
+            android:textColor="?attr/textColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/vacunaSeguimiento"
+            android:textColor="?attr/textColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
