--- a/app/src/main/res/menu/app_bar_menu.xml
+++ b/app/src/main/res/menu/app_bar_menu.xml
@@ -7,6 +7,7 @@
         android:icon="@drawable/ic_outline_change_theme"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
+        android:tint="?attr/textColor"
          />
 
 </menu>
